syntax = "proto3";
option java_package = "app.grpc";
option java_outer_classname = "User";

service user {
  rpc login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string userName = 1;
  string password = 2;
}

message LoginResponse {
  string msgResponse = 1;
  int32 idResponse = 2;
}
